# mppi_torch

./: .gitignore  README.md  pyproject.toml
examples/point_robot/: config.yaml  dynamics.py  objective.py  run.py  simulator.py
mppi_torch/: mppi.py  mppi_utils.py
src/mppi_torch/: __init__.py  mppi.py
