[project]
name = "mppi-torch"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Chadi Salmi", email = "c.salmi@tudelft.nl" }
]
dependencies = [
    "torch~=2.1",
    "urdfenvs~=0.8",
    "ghalton==0.6.1",
    "tqdm>=4.66.2",
]
requires-python = "==3.8"
readme = "README.md"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/mppi_torch"]
