[tool.poetry]
name = "mppi-torch"
version = "0.1.0"
description = ""
authors = ["Chadi Salmi <c.salmi@tudelft.nl>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
torch = "^2.1.2"
gym = "^0.26.2"
urdfenvs = "^0.9.12"
mypy = "^1.8.0"
ghalton = "0.6.1"
tqdm = "^4.66.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
